# tm-backend-trainee

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-check.yml
services/: __init__.py
services/counter_stat/: __init__.py  container.py  dal.py  main.py  models.py  utils.py
services/counter_stat/routers/: __init__.py  counter_stat.py
services/db/: __init__.py  config.py  init.sql
services/redis/: config.py
utils/: __init__.py
utils/sqlalchemy/: __init__.py  dal.py  protocols.py
