[tool.poetry]
name = "tm-backend-trainee"
version = "0.1.0"
description = ""
authors = ["Dmitry Vasiliev <contact.vasiliev.dmitry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
loguru = "^0.6.0"
dependency-injector = "^4.39.1"
asyncpg = "^0.26.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.39"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.961"
flake8 = "^4.0.1"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.39"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"
